finish the Forth Project

--- a/Second_Project_Folder/index.html
+++ b/Second_Project_Folder/index.html
@@ -13,9 +13,7 @@
     <link rel="stylesheet" href="index.css">
     <link type='text/css' href='http://fonts.googleapis.com/css?family=Lato:400,700' />
 
-
-
-    <title>My  Website Page</title>
+    <title>My Second bootstrap Website Page</title>
 </head>
 
 <body>
@@ -138,8 +136,6 @@
                         <h5 class="mt-4 mb-2">Services Three</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta molestias quas doloribus
                             maiores neque, </p>
-
-
                     </div>
 
 
@@ -153,7 +149,7 @@
                         </div>
                         <h5 class="mt-4 mb-2">Services Four</h5>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta molestias quas doloribus
-                            maiores neque, </p>
+                            maiores neque,</p>
 
 
                     </div>
